--- a/week3.qmd
+++ b/week3.qmd
@@ -67,8 +67,8 @@ My initial knowledge of remote sensing was limited, but this exploration proved 
 
 Therefore, democratising remote sensing data and technological advancements will empower research on Earth's surface, surpassing local data collection, which is uneven and ununified by nature. Instead, remote sensing can be performed globally if the correct adjustments for the atmosphere and enhancements to fit the objectives are made.
 
-However, while this is an untapped data source, there are two hurdles to overcome before they may be fully utilised.
+However, while this is an untapped data source, two hurdles must be overcome before it may be fully utilised.
 
--   Technical competence: Remote sensing is jargon-filled, with each discipline adopting its best practice to harness the data, making the barrier to entry higher than that of other types of data analysis work. Standardisation of industry-agnostic workflow and training may be vital to upskilling geospatial analysts to work more natively with remote sensing data.
+-   **Technical competence:** Remote sensing is jargon-filled, with each discipline adopting its best practice to harness the data, making the barrier to entry higher than that of other types of data analysis work. Standardisation of industry-agnostic workflow and training may be vital to upskilling geospatial analysts to work more natively with remote sensing data.
 
--   High-resolution EO data are mostly not free and reserved for governmental/military use. High-quality EO data (multispectral, high spatial resolution, frequent, etc.) also depends on localities. Sophisticated enhancement techniques may help bridge the gap by fusing existing datasets.
+-   **Data access inequality:** High-resolution EO data are mostly not free and reserved for governmental/military use. High-quality EO data (multispectral, high spatial resolution, frequent, etc.) also depends on localities. Sophisticated enhancement techniques may help bridge the gap by fusing existing datasets.
