--- a/week7.qmd
+++ b/week7.qmd
@@ -54,4 +54,4 @@ Upon reaching this part of the module, a lot of fragmented pieces of knowledge f
 
 Finally, all this would not have been possible if we did not know how to pose the right research question pertaining to urban spatial properties that can only be solved with RS and not others, e.g. LULC change detection. Besides much theory, being able to apply it seamlessly via Google Earth Engine has made what had seemed inaccessible thus far accessible to the general public. With the advancement in the field, RS data can truly level the playing field, especially for data-poor localities (i.e., with few official spatial datasets)
 
-One remaining question I have before discussing the next few topics is about imputation. Many of the possibilities offered by Remote Sensing data rely on relatively high spatial, temporal, and/or spectral resolution. For example, pixel-based classification methods are especially reliant on spatial resolution, and some change detection goals need high temporal frequency, even hourly. Are there ways to make the most out of free/low-cost RS data with lower than optimal resolution while not sacrificing accuracy?
+One remaining question I have before discussing the next few topics is about imputation. Many of the possibilities offered by Remote Sensing data use relatively high spatial, temporal, and/or spectral resolution. For example, pixel-based classification accuracy is especially reliant on spatial resolution, and some change detection goals need high temporal frequency, even hourly. Are there ways to make the most out of free/low-cost RS data with lower-than-optimal resolution while not sacrificing accuracy?
