--- a/week2.qmd
+++ b/week2.qmd
@@ -1,6 +1,6 @@
 # A peek into the LiDAR technology
 
-Having understood how sensors work in theory, we can now shift our view to appreciate how one of them in particular, [LiDAR](https://www.faro.com/en/Resource-Library/Article/What-is-Lidar) (**Li**ght **D**etection **a**nd **R**anging), is deployed in practice and can benefit us not only in an emerging sector like Autonomous Vehicles but also in Urban Planning
+Having understood how sensors work in theory, we can now shift our view to appreciate how one of them in particular, [LiDAR](https://www.faro.com/en/Resource-Library/Article/What-is-Lidar) (**Li**ght **D**etection **a**nd **R**anging), is deployed in practice and can benefit us not only in an emerging sector like Autonomous Vehicles but also in Urban Planning.
 
 ```{=html}
 <iframe class="slide-deck" height=800 width=800 src="slides/prez_wk2.html"> 
