--- a/references.bib
+++ b/references.bib
@@ -696,6 +696,13 @@
   file = {C:\Users\shaun\Zotero\storage\4A5JYAGN\figures.html}
 }
 
+@online{PDFSupportVector,
+  title = {(1) ({{PDF}}) {{Support}} Vector Machine versus Convolutional Neural Network for Hyperspectral Image Classification: {{A}} Systematic Review},
+  url = {https://www.researchgate.net/publication/359459795_Support_vector_machine_versus_convolutional_neural_network_for_hyperspectral_image_classification_A_systematic_review},
+  urldate = {2024-04-03},
+  file = {C:\Users\shaun\Zotero\storage\ND2SF8U3\359459795_Support_vector_machine_versus_convolutional_neural_network_for_hyperspectral_image_cl.html}
+}
+
 @article{perez-cutillasWhatGoingGoogle2023,
   title = {What Is Going on within Google Earth Engine? {{A}} Systematic Review and Meta-Analysis},
   shorttitle = {What Is Going on within Google Earth Engine?},
