--- a/references.bib
+++ b/references.bib
@@ -73,6 +73,16 @@
   file = {C:\Users\shaun\Zotero\storage\48FQ9F7X\S0034425718303742.html}
 }
 
+@software{cordtsMcordtsCityscapesScripts2024,
+  title = {Mcordts/{{cityscapesScripts}}},
+  author = {Cordts, Marius},
+  date = {2024-04-05T02:29:26Z},
+  origdate = {2016-02-20T13:00:11Z},
+  url = {https://github.com/mcordts/cityscapesScripts},
+  urldate = {2024-04-05},
+  abstract = {README and scripts for the Cityscapes Dataset}
+}
+
 @article{degerickxEnhancingPerformanceMultiple2019,
   title = {Enhancing the Performance of {{Multiple Endmember Spectral Mixture Analysis}} ({{MESMA}}) for Urban Land Cover Mapping Using Airborne Lidar Data and Band Selection},
   author = {Degerickx, J. and Roberts, D. A. and Somers, B.},
@@ -464,6 +474,26 @@
   file = {C:\Users\shaun\Zotero\storage\9X6XIWI5\Kumar and Mutanga - 2018 - Google Earth Engine Applications Since Inception .pdf}
 }
 
+@article{leeEvaluationHyperparameterCombinations2022,
+  title = {Evaluation of {{Hyperparameter Combinations}} of the {{U-Net Model}} for {{Land Cover Classification}}},
+  author = {Lee, Yongkyu and Sim, Woodam and Park, Jeongmook and Lee, Jungsoo},
+  date = {2022-11},
+  journaltitle = {Forests},
+  volume = {13},
+  number = {11},
+  pages = {1813},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {1999-4907},
+  doi = {10.3390/f13111813},
+  url = {https://www.mdpi.com/1999-4907/13/11/1813},
+  urldate = {2024-04-04},
+  abstract = {The aim of this study was to select the optimal deep learning model for land cover classification through hyperparameter adjustment. A U-Net model with encoder and decoder structures was used as the deep learning model, and RapidEye satellite images and a sub-divided land cover map provided by the Ministry of Environment were used as the training dataset and label images, respectively. According to different combinations of hyperparameters, including the size of the input image, the configuration of convolutional layers, the kernel size, and the number of pooling and up-convolutional layers, 90 deep learning models were built, and the model performance was evaluated through the training accuracy and loss, as well as the validation accuracy and loss values. The evaluation results showed that the accuracy was higher with a smaller image size and a smaller kernel size, and was more dependent on the convolutional layer configuration and number of layers than the kernel size. The loss tended to be lower as the convolutional layer composition and number of layers increased, regardless of the image size or kernel size. The deep learning model with the best performance recorded a validation loss of 0.11 with an image size of 64 × 64, a convolutional layer configuration of C→C→C→P, a kernel size of 5 × 5, and five layers. Regarding the classification accuracy of the land cover map constructed using this model, the overall accuracy and kappa coefficient for three study cities showed high agreement at approximately 82.9\% and 66.3\%, respectively.},
+  issue = {11},
+  langid = {english},
+  keywords = {deep learning,hyperparameter,land cover classification,U-net},
+  file = {C:\Users\shaun\Zotero\storage\INJ6FBI5\Lee et al. - 2022 - Evaluation of Hyperparameter Combinations of the U.pdf}
+}
+
 @article{liExtractingBuildingsHighresolution2022,
   title = {Extracting Buildings from High-Resolution Remote Sensing Images by Deep {{ConvNets}} Equipped with Structural-Cue-Guided Feature Alignment},
   author = {Li, Wangbin and Sun, Kaimin and Zhao, Hepeng and Li, Wenzhuo and Wei, Jinjiang and Gao, Song},
@@ -659,6 +689,19 @@
   abstract = {Mapping of soil organic carbon (SOC) at the regional level is critical for climate change policy and the mitigation of its adverse effects. However, reliable SOC estimates particularly over a large extent remains a major challenge due to among others limited sample points, quality of simulation data and the algorithm adopted. Remote sensing (RS) strategies have emerged as a suitable alternative to field and laboratory SOC determination, especially at large spatial extent. The use of Sentinel-3 sensor, the latest of the Sentinel series is minimal and has not been fully developed, despite its impressive attributes that include high spectral-temporal resolution and large coverage. Compared to linear and classical ML models, deep learning (DL) models offer a considerable improvement in data analysis due to their ability to extract more representative features and identify complex spatial patterns associated with big data. Yet, there is paucity in literature on the application of dl-based remote sensing strategies for SOC prediction. Consequently, this study adopted a deep neural network (DNN) to predict SOC at a national scale, using Sentinel-3 image, and compared the results with random forest (RF), support vector machine (SVM) and artificial neural network (ANN) models. The models were trained based on 10-fold cross-validation with 1936 soil samples and 31 predictors. The DNN model generated the best result with a root mean square error (RMSE) of 10.35~t/ha (26~\% of the mean), followed by RF (RMSE~=~11.2~t/ha), ANN (RMSE~=~11.6~t/ha) and SVM (RMSE~=~13.6~t/ha). The analytical prowess of the DNN, together with its ability to handle big data by learning patterns through a series of hidden layers (10) to draw conclusions, gives it an edge over other classical ML models. The study concluded that the DNN model with Sentinel-3 data is promising and provides an effective framework for continuous national level SOC modelling.},
   keywords = {Deep neural network,Remote sensing,Sentinel-3,Soil organic carbon},
   file = {C:\Users\shaun\Zotero\storage\LGIHMPB9\S0016706122000027.html}
+}
+
+@article{ozturkComparisonFullyConvolutional2020,
+  title = {Comparison of {{Fully Convolutional Networks}} ({{FCN}}) and {{U-Net}} for {{Road Segmentation}} from {{High Resolution Imageries}}},
+  author = {Öztürk, Ozan and Sariturk, Batuhan and Seker, Dursun},
+  date = {2020-09-19},
+  journaltitle = {International Journal of Environment and Geoinformatics},
+  shortjournal = {International Journal of Environment and Geoinformatics},
+  volume = {7},
+  pages = {272--279},
+  doi = {10.30897/ijegeo.737993},
+  abstract = {Segmentation is one of the most popular classification techniques which still have semantic labels. In this context, the segmentation of different objects such as cars, airplanes, ships, and buildings that are independent of background and objects such as land use and vegetation classes, which are difficult to discriminate from the background is considered. However, in image segmentation studies, various difficulties such as shadow, image blockage, a disorder of background, lighting, shading that cause fundamental modifications in the appearance of features are often encountered. With the development of technology, obtaining high spatial resolution satellite imageries and aerial photographs contain detailed texture information have been facilitated easily. Parallel to these improvements, deep learning architectures have widely been used to solved several computer vision tasks with an increasing level of difficulty. Thus, the regional characteristics, artificial and natural objects, can be perceived and interpreted precisely. In this study, two different subset data that were produced from a great open-source labeled image sets were used to segmentation of roads. The used labeled data set consists of 150 satellite images of size 1500 x 1500 pixels at a 1.2 m resolution, which was not efficient for training. In order to avoid any problem, the imageries were divided into smaller dimensions. Selected images from the data set divided into small patches of 256 x 256 pixels and 512 x 512 pixels to train the system, and comparisons between them were carried out. To train the system using these datasets, two different artificial neural network architectures U-Net and Fully Convolutional Networks (FCN), which are used for object segmentation on high-resolution images, were selected. When the test data with the same size as the training data set were analyzed, approximately 97\% extraction accuracy was obtained from high-resolution imageries trained by FCN in 512 x 512 dimensions.},
+  file = {C:\Users\shaun\Zotero\storage\LU63HJFY\Öztürk et al. - 2020 - Comparison of Fully Convolutional Networks (FCN) a.pdf}
 }
 
 @online{PDFAtmosphericCorrection,
