--- a/references.bib
+++ b/references.bib
@@ -415,6 +415,15 @@
   abstract = {Reliable data on economic livelihoods remain scarce in the developing world, hampering efforts to study these outcomes and to design policies that improve them. Here we demonstrate an accurate, inexpensive, and scalable method for estimating consumption expenditure and asset wealth from high-resolution satellite imagery. Using survey and satellite data from five African countries—Nigeria, Tanzania, Uganda, Malawi, and Rwanda—we show how a convolutional neural network can be trained to identify image features that can explain up to 75\% of the variation in local-level economic outcomes. Our method, which requires only publicly available data, could transform efforts to track and target poverty in developing countries. It also demonstrates how powerful machine learning techniques can be applied in a setting with limited training data, suggesting broad potential application across many scientific domains.}
 }
 
+@online{JoinThisVideo,
+  title = {Join This Video Meeting},
+  url = {https://meet.google.com},
+  urldate = {2024-04-17},
+  abstract = {Real-time meetings by Google. Using your browser, share your video, desktop, and presentations with teammates and customers.},
+  langid = {english},
+  file = {C:\Users\shaun\Zotero\storage\IYWPGNQQ\pgx-xgkx-dqe.html}
+}
+
 @article{kasnizajumariAnalysisUrbanHeat2023,
   title = {Analysis of Urban Heat Islands with Landsat Satellite Images and {{GIS}} in {{Kuala Lumpur Metropolitan City}}},
   author = {Kasniza Jumari, Nasrin Adlin Syahirah and Ahmed, Ali Najah and Huang, Yuk Feng and Ng, Jing Lin and Koo, Chai Hoon and Chong, Kai Lun and Sherif, Mohsen and Elshafie, Ahmed},
@@ -1174,6 +1183,25 @@
   url = {http://localhost:5436/},
   urldate = {2024-03-07},
   file = {C:\Users\shaun\Zotero\storage\9KI8Z9WU\localhost.html}
+}
+
+@article{wuStudyDesertificationIndex2019,
+  title = {Study of the Desertification Index Based on the Albedo-{{MSAVI}} Feature Space for Semi-Arid Steppe Region},
+  author = {Wu, Zhenhua and Lei, Shaogang and Bian, Zhengfu and Huang, Jiu and Zhang, Yong},
+  date = {2019-03-22},
+  journaltitle = {Environmental Earth Sciences},
+  shortjournal = {Environ Earth Sci},
+  volume = {78},
+  number = {6},
+  pages = {232},
+  issn = {1866-6299},
+  doi = {10.1007/s12665-019-8111-9},
+  url = {https://doi.org/10.1007/s12665-019-8111-9},
+  urldate = {2024-04-15},
+  abstract = {Desertification has been listed as the top of ten major problems affecting global environmental changes, and represents one of the important reasons of semi-arid grassland degradation. It is therefore crucial to understand ecological environment of semi-arid grasslands and temporal and spatial changes in real time for regional and local environmental protection and management. At present, remote sensing technology is being widely used in monitoring and evaluation of land desertification due to its wide observation range, large amount of information, fast data updating and high accuracy. It represents an advanced method for remote sensing monitoring of desertification by extracting various indicators and constructing feature space. Based on this, this study used Landsat images and field survey data to establish a desertification index (SASDI) model based on the albedo-MSAVI (Modified Soil Adjusted Vegetation Index) feature space and analyze the relationship between desertification and surface quantitative parameters in semi-arid grassland area. Results show that the SASDI model has a high correlation (R2\,=\,0.7585) with the organic matter in the soil surface and makes full use of multi-dimensional remote sensing information. The index reflects the surface cover, water, and heat combination as well as changes of the desertification land, with a clear biophysical significance. Moreover, the index is simple and easy to obtain, facilitating to quantitative analysis and continuous monitoring of desertification in semi-arid grasslands.},
+  langid = {english},
+  keywords = {Albedo,Desertification index,Feature space,MSAVI,Remote sensing monitoring},
+  file = {C:\Users\shaun\Zotero\storage\VJCXMNBE\Wu et al. - 2019 - Study of the desertification index based on the al.pdf}
 }
 
 @article{yingWildfireDetectionProbability2019,
