--- a/references.bib
+++ b/references.bib
@@ -594,13 +594,13 @@
   author = {Manvi, Rohin and Khanna, Samar and Mai, Gengchen and Burke, Marshall and Lobell, David and Ermon, Stefano},
   date = {2023-10-09},
   eprint = {2310.06213},
-  eprinttype = {arxiv},
+  eprinttype = {arXiv},
   eprintclass = {cs},
   doi = {10.48550/arXiv.2310.06213},
   url = {http://arxiv.org/abs/2310.06213},
   urldate = {2024-01-10},
   abstract = {The application of machine learning (ML) in a range of geospatial tasks is increasingly common but often relies on globally available covariates such as satellite imagery that can either be expensive or lack predictive power. Here we explore the question of whether the vast amounts of knowledge found in Internet language corpora, now compressed within large language models (LLMs), can be leveraged for geospatial prediction tasks. We first demonstrate that LLMs embed remarkable spatial information about locations, but naively querying LLMs using geographic coordinates alone is ineffective in predicting key indicators like population density. We then present GeoLLM, a novel method that can effectively extract geospatial knowledge from LLMs with auxiliary map data from OpenStreetMap. We demonstrate the utility of our approach across multiple tasks of central interest to the international community, including the measurement of population density and economic livelihoods. Across these tasks, our method demonstrates a 70\% improvement in performance (measured using Pearson's \$r\textasciicircum 2\$) relative to baselines that use nearest neighbors or use information directly from the prompt, and performance equal to or exceeding satellite-based benchmarks in the literature. With GeoLLM, we observe that GPT-3.5 outperforms Llama 2 and RoBERTa by 19\% and 51\% respectively, suggesting that the performance of our method scales well with the size of the model and its pretraining dataset. Our experiments reveal that LLMs are remarkably sample-efficient, rich in geospatial information, and robust across the globe. Crucially, GeoLLM shows promise in mitigating the limitations of existing geospatial covariates and complementing them well.},
-  pubstate = {preprint},
+  pubstate = {prepublished},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
   file = {C\:\\Users\\shaun\\Zotero\\storage\\5FXAIDZX\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.pdf;C\:\\Users\\shaun\\Zotero\\storage\\P89BHQUM\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.html}
 }
@@ -961,7 +961,9 @@
   urldate = {2024-02-15},
   abstract = {Soil carbon storage is a vital ecosystem service, resulting from interactions of ecological processes. Human activities affecting these processes can lead to carbon loss or improved storage.},
   langid = {english},
-  annotation = {Cg\_cat: Soil Carbon Storage Cg\_level: DIF Cg\_topic: Soil Carbon Storage},
+  annotation = {Cg\_cat: Soil Carbon Storage\\
+Cg\_level: DIF\\
+Cg\_topic: Soil Carbon Storage},
   file = {C:\Users\shaun\Zotero\storage\PFNS6RUA\soil-carbon-storage-84223790.html}
 }
 
